--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-xl-6">
           <h1>Welcome to Defo Properties</h1>
           <h2>We are a startup of real estate developers ready to build your dream</h2>
-          <a href="#about" class="btn-get-started scrollto">Get Started</a>
+          <a href="#about" class="btn-get-started scrollto">Contact us</a>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
             <div class="content">
               <h3>Our Values</h3>
               <p>
-                We at Defo Properties believe in a lot of value that makes working with and for us a beautiful experience.
+                Defo Properties believe in a lot of value that makes working with and for us a beautiful experience.
               </p>
               <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
             </div>
@@ -424,11 +424,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/eight-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Wall Mural</h4>
+                <p>Central University Ghana</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/fixed/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -438,11 +438,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/three.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>17th Support Mission House </h4>
+                <p>Miotso Junction</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/four.JPG" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/three.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -452,11 +452,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/four.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Wall Mural</h4>
+                <p>Dansoman Estates</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/four.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -466,11 +466,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/two.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Landscaping</h4>
+                <p>BBnz Live</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/two.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -480,11 +480,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/five.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>ASAPGhana Office</h4>
+                <p>East Legon</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/five.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -494,11 +494,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/six.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>Aljay Night Club</h4>
+                <p>Comm. 18 </p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/six.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -508,11 +508,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/seven.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Residential</h4>
+                <p>50 3rd Road, Ablekuma</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/eight.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/seven.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -522,11 +522,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/eight.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Residential</h4>
+                <p>*Undisclosed*</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/eight.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -536,11 +536,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fixed/nine.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Residential</h4>
+                <p>*Undisclosed*</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/fixed/nine.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -785,10 +785,10 @@
               <div class="member-img">
                 <img src="assets/img/team/derrick.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://twitter.com/DefoProperties?s=20"><i class="icofont-twitter"></i></a>
+                  <!-- <a href=""><i class="icofont-facebook"></i></a> -->
+                  <a href="https://www.instagram.com/_fosu/"><i class="icofont-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/derrick-fosu-b4102b151/?originalSubdomain=gh"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -803,10 +803,10 @@
               <div class="member-img">
                 <img src="assets/img/team/Major.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://twitter.com/neequayye"><i class="icofont-twitter"></i></a>
+                  <!-- <a href="#"><i class="icofont-facebook"></i></a> -->
+                  <a href="https://www.instagram.com/michaelneequayye/"><i class="icofont-instagram"></i></a>
+                  <!-- <a href=""><i class="icofont-linkedin"></i></a> -->
                 </div>
               </div>
               <div class="member-info">
@@ -945,11 +945,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Real-Estate-Startup<span>.</span></h3>
             <p>
-              Central University <br>
-              Accra, <br>
+              Konadu Complex Community 4, <br>
+             Tema, <br>
               Ghana <br><br>
-              <strong>Phone:</strong> +233 54 597 7791<br>
-              <strong>Email:</strong> info@Real-Estate-Startup.com<br>
+              <strong>Phone:</strong> +233 242 708 862<br>
+              <strong>Email:</strong> info@defoproperties.com<br>
             </p>
           </div>
 
@@ -967,18 +967,19 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Installation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Fabrication works</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Painting and Murals </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Customization</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Project Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Landscaping</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
+            <p>Keep up with DeFo Properties by subscribing to our Newsletter</p>
+            <form action="" method="">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
