--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Here are some of the people that us at Defo Properties who we are </p>
+          <p>Here are some of the people that make us at Defo Properties who we are </p>
         </div>
 
         <div class="row">
@@ -829,7 +829,7 @@
               </div>
               <div class="member-info">
                 <h4>Bernard Larteh Ashitey</h4>
-                <span>Marketting Manager</span>
+                <span>Marketing Manager</span>
               </div>
             </div>
           </div>
