--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-xl-6">
           <h1>Welcome to Defo Properties</h1>
           <h2>We are a startup of real estate developers ready to build your dream</h2>
-          <a href="#about" class="btn-get-started scrollto">Contact us</a>
+          <a href="#contact" class="btn-get-started scrollto">Contact us</a>
         </div>
       </div>
     </div>
@@ -427,7 +427,7 @@
                 <h4>Wall Mural</h4>
                 <p>Central University Ghana</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -441,7 +441,7 @@
                 <h4>17th Support Mission House </h4>
                 <p>Miotso Junction</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/three.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/three.jpg" data-gall="portfolioGallery" class="venobox" title="17th Support"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -455,7 +455,7 @@
                 <h4>Wall Mural</h4>
                 <p>Dansoman Estates</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/four.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/four.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -469,7 +469,7 @@
                 <h4>Landscaping</h4>
                 <p>BBnz Live</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/two.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/two.jpg" data-gall="portfolioGallery" class="venobox" title="Landscaping"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -483,7 +483,7 @@
                 <h4>ASAPGhana Office</h4>
                 <p>East Legon</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/five.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/five.jpg" data-gall="portfolioGallery" class="venobox" title="ASAPGhana"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -497,7 +497,7 @@
                 <h4>Aljay Night Club</h4>
                 <p>Comm. 18 </p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/six.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/six.jpg" data-gall="portfolioGallery" class="venobox" title="Alijay"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -511,7 +511,7 @@
                 <h4>Residential</h4>
                 <p>50 3rd Road, Ablekuma</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/seven.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/seven.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -525,7 +525,7 @@
                 <h4>Residential</h4>
                 <p>*Undisclosed*</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/eight.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/eight.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -539,7 +539,7 @@
                 <h4>Residential</h4>
                 <p>*Undisclosed*</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/nine.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/nine.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -620,7 +620,7 @@
               <h4>Entrepreneur</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                I couldnt have found a better place to come for landscaping. Their painting works are on point and I really appreciate the fact that they listen to theri customers
+                I couldnt have found a better place to come for landscaping. Their painting works are on point and I really appreciate the fact that they listen to their customers
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -1003,11 +1003,11 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/DefoProperties?s=20" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+        <a href="https://www.instagram.com/_fosu/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
