--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
-                  <h4>Team-Spirit</h4>
+                  <h4>Honesty</h4>
                   <p>Meaning team spirit, friendship, fidelity, generosity, fairness in sharing the benefits of collective work; </p>
                 </div>
               </div>
@@ -354,42 +354,42 @@
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="icofont-computer"></i>
-              <h4><a href="#">Installation</a></h4>
+              <h4>Installation</h4>
               <p>Our team can come and install all your wiring, furniture works, POP design, Plaster boards, graffiato, etc. .</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <i class="icofont-chart-bar-graph"></i>
-              <h4><a href="#">Fabrication Works</a></h4>
+              <h4>Fabrication Works</h4>
               <p>We do Sliding Gates, Sliding windows, Burglar Proof, Balustrade etc... </p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <i class="icofont-image"></i>
-              <h4><a href="#">Painting and Mural</a></h4>
+              <h4>Painting and Mural</h4>
               <p>We offer painting works for exterior and interior, wall murals, wallpaper, decorative designs</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <i class="icofont-settings"></i>
-              <h4><a href="#">Customization</a></h4>
+              <h4>Customization</h4>
               <p>We can build or renovate your building to fit your living style and aesthetic.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
               <i class="icofont-earth"></i>
-              <h4><a href="#">Project Consultation</a></h4>
+              <h4>Project Consultation</h4>
               <p>With our specialties, you can contact us. We offer Architectural Design, and Land Surveying. </p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
               <i class="icofont-tasks-alt"></i>
-              <h4><a href="#">Landscaping</a></h4>
+              <h4>Landscaping</h4>
               <p>We add a homey feel to your front yard and compound including Swimming Pool, garden, Fountain, etc.</p>
             </div>
           </div>
@@ -450,7 +450,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/four.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/four.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Wall Mural</h4>
                 <p>Dansoman Estates</p>
@@ -492,7 +492,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/six.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/six.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Aljay Night Club</h4>
                 <p>Comm. 18 </p>
@@ -520,7 +520,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/eight.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/eight.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Residential</h4>
                 <p>*Undisclosed*</p>
