--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="content">
               <h3>Our Values</h3>
               <p>
-                Defo Properties believe in a lot of value that makes working with and for us a beautiful experience.
+                Defo Properties believe in a lot of value that makes working with us a beautiful experience.
               </p>
               <a href="#" class="about-btn"><span>About us</span> <i class="bx bx-chevron-right"></i></a>
             </div>
