--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
                   <h4>Boldness</h4>
-                  <p>This implies a flair for entrepreneurship and a desire to take considered risks and show commitment</p>
+                  <p>This implies a flair for entrepreneurship and a desire to take considerable risks and show commitment.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
                   <h4>Team-Spirit</h4>
-                  <p>The willingness to empower both individuals and teams </p>
+                  <p>The will to empower both individuals and teams to work harder to give your dream house a top-notch feel. </p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
                   <h4>Honesty</h4>
-                  <p>Meaning team spirit, friendship, fidelity, generosity, fairness in sharing the benefits of collective work; </p>
+                  <p>Meaning team spirit, friendship, fidelity, generosity, fairness in sharing the benefits of collective work.</p>
                 </div>
               </div>
             </div><!-- End .content-->
@@ -354,22 +354,22 @@
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="icofont-computer"></i>
-              <h4>Installation</h4>
-              <p>Our team can come and install all your wiring, furniture works, POP design, Plaster boards, graffiato, etc. .</p>
+              <h4>Installation Works</h4>
+              <p>Our team can come and install all your wiring, furniture works, POP design, Plaster boards, Plumbing etc. .</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <i class="icofont-chart-bar-graph"></i>
               <h4>Fabrication Works</h4>
-              <p>We do Sliding Gates, Sliding windows, Burglar Proof, Balustrade etc... </p>
+              <p>We do Sliding Gates, Sliding windows, Burglar Proof, Balustrade, Electrical Fence, Car Shades etc... </p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <i class="icofont-image"></i>
-              <h4>Painting and Mural</h4>
-              <p>We offer painting works for exterior and interior, wall murals, wallpaper, decorative designs</p>
+              <h4>Painting Works</h4>
+              <p>We offer painting works for exterior and interior, wall murals, interior decor, Graffiato and Marble Lite outline etc</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
@@ -885,7 +885,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@defoproperties.com<br>contact@defoproperties.com</p>
+                  <p>info@defoproperties.com</p>
                 </div>
               </div>
               <div class="col-md-6">
