red contact boxes

--- a/index.html
+++ b/index.html
@@ -872,27 +872,27 @@
 
             <div class="row">
               <div class="col-md-12">
-                <div class="info-box">
-                  <i class="bx bx-map"></i>
-                  <h3>Our Address</h3>
-                  <p>Konadu shopping complex 
+                <div class="info-box" style="background-color: red;">
+                  <i style="color: white;" class="bx bx-map"></i>
+                  <h3 style="color: white;">Our Address</h3>
+                  <p style="color: white;">Konadu shopping complex 
                     Community 4, <br>Tema
                     Opposite chemu secondary school<br>
                     PMB COMMUNITY ONE  TEMA</p>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="info-box mt-4">
-                  <i class="bx bx-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>info@defoproperties.com</p>
+                <div class="info-box mt-4" style="background-color: red;">
+                  <i style="color: white;" class="bx bx-envelope"></i>
+                  <h3 style="color: white;">Email Us</h3>
+                  <p style="color: white;">info@defoproperties.com</p>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="info-box mt-4">
-                  <i class="bx bx-phone-call"></i>
-                  <h3>Call Us</h3>
-                  <p>+233 242 708 862<br>+233 50 221 4123</p>
+                <div class="info-box mt-4" style="background-color: red;">
+                  <i style="color: white;" class="bx bx-phone-call"></i>
+                  <h3 style="color: white;">Call Us</h3>
+                  <p style="color: white;">+233 242 708 862<br>+233 50 221 4123</p>
                 </div>
               </div>
             </div>
