--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">521</span>
+              <span data-toggle="counter-up">50</span>
               <p>Projects</p>
             </div>
           </div>
@@ -362,14 +362,14 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <i class="icofont-chart-bar-graph"></i>
               <h4>Fabrication Works</h4>
-              <p>We do Sliding Gates, Sliding windows, Burglar Proof, Balustrade, Electrical Fence, Car Shades etc... </p>
+              <p>We do Sliding Gates, Sliding windows, Burglar Proof, Balustrade, Electrical Fence, Car Shades etc. </p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <i class="icofont-image"></i>
               <h4>Painting Works</h4>
-              <p>We offer painting works for exterior and interior, wall murals, interior decor, Graffiato and Marble Lite outline etc</p>
+              <p>We offer painting works for exterior and interior, wall murals, interior decor, Graffiato and Marble Lite outline etc.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
@@ -775,7 +775,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Here are some of the people that make us at Defo Properties who we are </p>
+          <p>Here are some of the people that make Defo Properties who we are </p>
         </div>
 
         <div class="row">
@@ -872,7 +872,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <div class="info-box" style="background-color: red;">
+                <div class="info-box" style="background-color: #e03a3c;">
                   <i style="color: white;" class="bx bx-map"></i>
                   <h3 style="color: white;">Our Address</h3>
                   <p style="color: white;">Konadu shopping complex 
@@ -882,14 +882,14 @@
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="info-box mt-4" style="background-color: red;">
+                <div class="info-box mt-4" style="background-color: #e03a3c;">
                   <i style="color: white;" class="bx bx-envelope"></i>
                   <h3 style="color: white;">Email Us</h3>
                   <p style="color: white;">info@defoproperties.com</p>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="info-box mt-4" style="background-color: red;">
+                <div class="info-box mt-4" style="background-color: #e03a3c;">
                   <i style="color: white;" class="bx bx-phone-call"></i>
                   <h3 style="color: white;">Call Us</h3>
                   <p style="color: white;">+233 242 708 862<br>+233 50 221 4123</p>
@@ -967,9 +967,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Installation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Installation Works</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Fabrication works</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Painting and Murals </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Painting Works </a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Customization</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Project Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Landscaping</a></li>
