--- a/index.html
+++ b/index.html
@@ -821,10 +821,10 @@
               <div class="member-img">
                 <img src="assets/img/team/ben.JPG" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="https://twitter.com/b_ashitey"><i class="icofont-twitter"></i></a>
+                  <a href="https://www.facebook.com/ben.niiashitey"><i class="icofont-facebook"></i></a>
+                  <a href="https://www.instagram.com/bernardashitey1/"><i class="icofont-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/bernard-l-ashitey-795325158/"><i class="icofont-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -956,23 +956,23 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#header">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#team">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Installation Works</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Fabrication works</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Painting Works </a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Customization</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Project Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Landscaping</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Installation Works</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Fabrication works</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Painting Works </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Customization</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Project Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a>Landscaping</a></li>
             </ul>
           </div>
 
