--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
       <div class="row">
         <div class="col-xl-6">
           <h1>Welcome to Defo Properties</h1>
+          <h4 style="color: #e03a3c; font-weight: bold;">Results Matter</h4>
           <h2>We are a startup of real estate developers ready to build your dream</h2>
           <a href="#contact" class="btn-get-started scrollto">Contact us</a>
+
         </div>
       </div>
     </div>
@@ -355,7 +357,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <i class="icofont-computer"></i>
               <h4>Installation Works</h4>
-              <p>Our team can come and install all your wiring, furniture works, POP design, Plaster boards, Plumbing etc. .</p>
+              <p>Our team can install all your wiring, furniture works, POP design, Plaster boards, Plumbing etc. .</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
@@ -422,12 +424,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/eight-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/door.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Wall Mural</h4>
                 <p>Central University Ghana</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/door.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -450,12 +452,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/four.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/contstruct11.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Wall Mural</h4>
                 <p>Dansoman Estates</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/four.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/construct11.jpg" data-gall="portfolioGallery" class="venobox" title="Wall Mural"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -478,12 +480,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/five.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/car.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ASAPGhana Office</h4>
                 <p>East Legon</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/five.jpg" data-gall="portfolioGallery" class="venobox" title="ASAPGhana"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/car.jpg" data-gall="portfolioGallery" class="venobox" title="ASAPGhana"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -506,12 +508,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/seven.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/fence.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Residential</h4>
                 <p>50 3rd Road, Ablekuma</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/seven.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/fence.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -520,12 +522,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/eight.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/gate.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Residential</h4>
                 <p>*Undisclosed*</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/eight.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/gate.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -534,12 +536,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fixed/nine.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/fixed/stair.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Residential</h4>
                 <p>*Undisclosed*</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/fixed/nine.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/fixed/stair.jpg" data-gall="portfolioGallery" class="venobox" title="Residential"><i class="bx bx-plus"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
@@ -924,7 +926,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button onclick="wholemessage()">Send Message</button></div>
+              <div class="text-center"><button style="background-color: #e03a3c; border: none; padding: 10px; color: white;" onclick="wholemessage()">Send Message</button></div>
             </form>
           </div>
 
